analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/JvmOverloadsActualWithInheritedDefaults.java
public final class Foo /* common.pack.Foo*/ {
  @kotlin.jvm.JvmOverloads()
  public final void foo();//  foo()

  @kotlin.jvm.JvmOverloads()
  public final void foo(int);//  foo(int)

  @kotlin.jvm.JvmOverloads()
  public final void foo(int, int);//  foo(int, int)

  @kotlin.jvm.JvmOverloads()
  public final void foo(int, int, int);//  foo(int, int, int)

  public  Foo();//  .ctor()
}
